--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,18 +10,23 @@ div {
 }
 
 #left {
-	width: 220px;
+	width: 420px;
 	margin: 5px;
 	background-color: blue;
 }
 
 #center {
 	margin: 5px 0;
-	width: calc(100% - 460px);
+	width: calc(100% - 660px);
 	background-color: yellow;
 }
 
 #right {
 	margin: 5px;
 	width: 220px;
+}
+
+#feed {
+	height: 100%;
+	width: 400px;
 }
