--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,20 +10,20 @@ div {
 }
 
 #left {
-	width: calc(25% - 5px);
+	width: calc(25%);
 	margin: 5px;
 	background-color: blue;
 }
 
 #center {
 	margin: 5px 0;
-	width: calc(50% - 20 px);
+	width: calc(50%);
 	background-color: yellow;
 }
 
 #right {
 	margin: 5px;
-	width: calc(25% - 5px);
+	width: calc(25%);
 }
 
 #feed {
